[tool.poetry]
name = "dannylongeuay"
version = "0.1.0"
description = ""
authors = ["dannylongeuay <dannylongeuay@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
